6652  filtrering h bucer (#663)